@@ -18,21 +18,21 @@
 package it.units.erallab.hmsrobots.tasks;
 
 import it.units.erallab.hmsrobots.behavior.BehaviorUtils;
-import it.units.erallab.hmsrobots.core.objects.ControllableVoxel;
 import it.units.erallab.hmsrobots.core.objects.Robot;
+import it.units.erallab.hmsrobots.core.objects.Voxel;
 import it.units.erallab.hmsrobots.core.objects.WorldObject;
 import it.units.erallab.hmsrobots.core.snapshots.SnapshotListener;
 import it.units.erallab.hmsrobots.util.Grid;
+import org.dyn4j.dynamics.Body;
 import org.dyn4j.dynamics.Settings;
-import org.dyn4j.dynamics.World;
 import org.dyn4j.geometry.Vector2;
+import org.dyn4j.world.World;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
-public class FinalPosture extends AbstractTask<Robot<?>, Grid<Boolean>> {
+public class FinalPosture extends AbstractTask<Robot, Grid<Boolean>> {
 
   private final int gridSize;
   private final double finalT;
@@ -44,9 +44,9 @@ public class FinalPosture extends AbstractTask<Robot<?>, Grid<Boolean>> {
   }
 
   @Override
-  public Grid<Boolean> apply(Robot<?> robot, SnapshotListener listener) {
+  public Grid<Boolean> apply(Robot robot, SnapshotListener listener) {
     //init world
-    World world = new World();
+    World<Body> world = new World<>();
     world.setSettings(settings);
     world.setGravity(Vector2.create(0d, Math.PI));
     List<WorldObject> worldObjects = new ArrayList<>();
@@ -63,8 +63,8 @@ public class FinalPosture extends AbstractTask<Robot<?>, Grid<Boolean>> {
     return BehaviorUtils.computePosture(
         robot.getVoxels().values().stream()
             .filter(Objects::nonNull)
-            .map(ControllableVoxel::getVoxelPoly)
-            .collect(Collectors.toList()),
+            .map(Voxel::getVoxelPoly)
+            .toList(),
         gridSize
     );
   }
