@@ -19,14 +19,13 @@ package it.units.erallab.hmsrobots.util;
 
 import it.units.erallab.hmsrobots.core.objects.BreakableVoxel;
 import it.units.erallab.hmsrobots.core.objects.Robot;
-import it.units.erallab.hmsrobots.core.objects.SensingVoxel;
+import it.units.erallab.hmsrobots.core.objects.Voxel;
 import it.units.erallab.hmsrobots.core.sensors.*;
 
 import java.util.*;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 import static it.units.erallab.hmsrobots.util.Utils.params;
 
@@ -41,10 +40,16 @@ public class RobotUtils {
       Map.entry("r", (x, y) -> new SoftNormalization(new Angle())),
       Map.entry("vx", (x, y) -> new SoftNormalization(new Average(new Velocity(true, 8d, Velocity.Axis.X), 0.5))),
       Map.entry("vy", (x, y) -> new SoftNormalization(new Average(new Velocity(true, 8d, Velocity.Axis.Y), 0.5))),
-      Map.entry("vxy", (x, y) -> new SoftNormalization(new Average(new Velocity(true, 8d, Velocity.Axis.X, Velocity.Axis.Y), 0.5))),
+      Map.entry(
+          "vxy",
+          (x, y) -> new SoftNormalization(new Average(new Velocity(true, 8d, Velocity.Axis.X, Velocity.Axis.Y), 0.5))
+      ),
       Map.entry("ax", (x, y) -> new SoftNormalization(new Trend(new Velocity(true, 4d, Velocity.Axis.X), 0.5))),
       Map.entry("ay", (x, y) -> new SoftNormalization(new Trend(new Velocity(true, 4d, Velocity.Axis.Y), 0.5))),
-      Map.entry("axy", (x, y) -> new SoftNormalization(new Trend(new Velocity(true, 4d, Velocity.Axis.X, Velocity.Axis.Y), 0.5))),
+      Map.entry(
+          "axy",
+          (x, y) -> new SoftNormalization(new Trend(new Velocity(true, 4d, Velocity.Axis.X, Velocity.Axis.Y), 0.5))
+      ),
       Map.entry("px", (x, y) -> new Constant(x)),
       Map.entry("py", (x, y) -> new Constant(y)),
       Map.entry("m", (x, y) -> new Malfunction()),
@@ -53,24 +58,10 @@ public class RobotUtils {
       Map.entry("l1", (x, y) -> new Normalization(new Lidar(10d, Map.of(lidarSide(x, y), 1))))
   ));
 
-  private static Lidar.Side lidarSide(double x, double y) {
-    if (y > x && y > (1 - x)) {
-      return Lidar.Side.N;
-    }
-    if (y >= x && y <= (1 - x)) {
-      return Lidar.Side.W;
-    }
-    if (y < x && y < (1 - x)) {
-      return Lidar.Side.S;
-    }
-    return Lidar.Side.E;
-  }
-
-
   private RobotUtils() {
   }
 
-  public static UnaryOperator<Robot<?>> buildRobotTransformation(String name, Random externalRandom) {
+  public static UnaryOperator<Robot> buildRobotTransformation(String name, Random externalRandom) {
     String breakable = "breakable-(?<triggerType>time|area)-(?<thresholdMean>\\d+(\\.\\d+)?)/(?<thresholdStDev>\\d+(\\.\\d+)?)-(?<restTimeMean>\\d+(\\.\\d+)?)/(?<restTimeStDev>\\d+(\\.\\d+)?)-(?<seed>\\d+|rnd)";
     String broken = "broken-(?<ratio>\\d+(\\.\\d+)?)-(?<seed>\\d+|rnd)";
     String identity = "identity";
@@ -90,27 +81,22 @@ public class RobotUtils {
       } else {
         random = externalRandom;
       }
-      return new UnaryOperator<Robot<?>>() {
-        @Override
-        @SuppressWarnings("unchecked")
-        public Robot<?> apply(Robot<?> robot) {
-          return new Robot<>(
-              ((Robot<SensingVoxel>) robot).getController(),
-              Grid.create(SerializationUtils.clone((Grid<SensingVoxel>) robot.getVoxels()), v -> v == null ? null : new BreakableVoxel(
+      return robot -> new Robot(
+          robot.getController(),
+          Grid.create(
+              SerializationUtils.clone(robot.getVoxels()),
+              v -> v == null ? null : new BreakableVoxel(
                   v.getSensors(),
                   random.nextInt(),
-                  Map.of(
-                      BreakableVoxel.ComponentType.ACTUATOR, Set.of(BreakableVoxel.MalfunctionType.FROZEN)
-                  ),
+                  Map.of(BreakableVoxel.ComponentType.ACTUATOR, Set.of(BreakableVoxel.MalfunctionType.FROZEN)),
                   Map.of(
                       BreakableVoxel.MalfunctionTrigger.valueOf(type.toUpperCase()),
                       random.nextGaussian() * thresholdStDev + thresholdMean
                   ),
                   random.nextGaussian() * restoreTimeStDev + restoreTimeMean
-              ))
-          );
-        }
-      };
+              )
+          )
+      );
     }
     if ((params = params(broken, name)) != null) {
       double ratio = Double.parseDouble(params.get("ratio"));
@@ -120,113 +106,92 @@ public class RobotUtils {
       } else {
         random = externalRandom;
       }
-      return new UnaryOperator<Robot<?>>() {
-        @Override
-        @SuppressWarnings("unchecked")
-        public Robot<?> apply(Robot<?> robot) {
-          return new Robot<>(
-              ((Robot<SensingVoxel>) robot).getController(),
-              Grid.create(SerializationUtils.clone((Grid<SensingVoxel>) robot.getVoxels()), v -> v == null ? null : random.nextDouble() > ratio ? v : new BreakableVoxel(
-                  v.getSensors(),
-                  random.nextInt(),
-                  Map.of(BreakableVoxel.ComponentType.ACTUATOR, Set.of(BreakableVoxel.MalfunctionType.FROZEN)),
-                  Map.of(BreakableVoxel.MalfunctionTrigger.TIME, 0d),
-                  Double.POSITIVE_INFINITY
-              ))
-          );
-        }
-      };
+      return robot -> new Robot(robot.getController(), Grid.create(
+          SerializationUtils.clone(robot.getVoxels()),
+          v -> v == null ? null : random.nextDouble() > ratio ? v : new BreakableVoxel(
+              v.getSensors(),
+              random.nextInt(),
+              Map.of(BreakableVoxel.ComponentType.ACTUATOR, Set.of(BreakableVoxel.MalfunctionType.FROZEN)),
+              Map.of(BreakableVoxel.MalfunctionTrigger.TIME, 0d),
+              Double.POSITIVE_INFINITY
+          )
+      ));
     }
     throw new IllegalArgumentException(String.format("Unknown transformation name: %s", name));
   }
 
-  public static Function<Grid<Boolean>, Grid<? extends SensingVoxel>> buildSensorizingFunction(String name) {
+  public static Function<Grid<Boolean>, Grid<Voxel>> buildSensorizingFunction(String name) {
     String spineTouch = "spinedTouch-(?<cpg>[tf])-(?<malfunction>[tf])-(?<noiseSigma>\\d+(\\.\\d+)?)";
     String spineTouchSighted = "spinedTouchSighted-(?<cpg>[tf])-(?<malfunction>[tf])-(?<noiseSigma>\\d+(\\.\\d+)?)";
-    String uniform = "uniform-(?<sensors>(" + String.join("|", PREDEFINED_SENSORS.keySet()) + ")(\\+(" + String.join("|", PREDEFINED_SENSORS.keySet()) + "))*)-(?<noiseSigma>\\d+(\\.\\d+)?)";
+    String uniform = "uniform-(?<sensors>(" + String.join("|", PREDEFINED_SENSORS.keySet()) + ")(\\+(" + String.join(
+        "|",
+        PREDEFINED_SENSORS.keySet()
+    ) + "))*)-(?<noiseSigma>\\d+(\\.\\d+)?)";
     String uniformAll = "uniformAll-(?<noiseSigma>\\d+(\\.\\d+)?)";
     String empty = "empty";
     Map<String, String> params;
     if ((params = params(spineTouch, name)) != null) {
       final Map<String, String> pars = params;
       double noiseSigma = Double.parseDouble(params.get("noiseSigma"));
-      return body -> Grid.create(body.getW(), body.getH(),
-          (x, y) -> {
-            if (!body.get(x, y)) {
-              return null;
-            }
-            return new SensingVoxel(
-                Utils.ofNonNull(
-                        sensor("a", x, y, body),
-                        sensor("m", x, y, body, pars.get("malfunction").equals("t")),
-                        sensor("t", x, y, body, y == 0),
-                        sensor("vxy", x, y, body, y == body.getH() - 1),
-                        sensor("cpg", x, y, body, x == body.getW() - 1 && y == body.getH() - 1 && pars.get("cpg").equals("t"))
-                    ).stream()
-                    .map(s -> noiseSigma == 0 ? s : new Noisy(s, noiseSigma, 0))
-                    .collect(Collectors.toList())
-            );
-          }
-      );
+      return body -> Grid.create(body.getW(), body.getH(), (x, y) -> {
+        if (!body.get(x, y)) {
+          return null;
+        }
+        return new Voxel(Utils.ofNonNull(
+            sensor("a", x, y, body),
+            sensor("m", x, y, body, pars.get("malfunction").equals("t")),
+            sensor("t", x, y, body, y == 0),
+            sensor("vxy", x, y, body, y == body.getH() - 1),
+            sensor("cpg", x, y, body, x == body.getW() - 1 && y == body.getH() - 1 && pars.get("cpg").equals("t"))
+        ).stream().map(s -> noiseSigma == 0 ? s : new Noisy(s, noiseSigma, 0)).toList());
+      });
     }
     if ((params = params(spineTouchSighted, name)) != null) {
       final Map<String, String> pars = params;
       double noiseSigma = Double.parseDouble(params.get("noiseSigma"));
-      return body -> Grid.create(body.getW(), body.getH(),
-          (x, y) -> {
-            if (!body.get(x, y)) {
-              return null;
-            }
-            return new SensingVoxel(
-                Utils.ofNonNull(
-                        sensor("a", x, y, body),
-                        sensor("m", x, y, body, pars.get("malfunction").equals("t")),
-                        sensor("t", x, y, body, y == 0),
-                        sensor("vxy", x, y, body, y == body.getH() - 1),
-                        sensor("cpg", x, y, body, x == body.getW() - 1 && y == body.getH() - 1 && pars.get("cpg").equals("t")),
-                        sensor("l5", x, y, body, x == body.getW() - 1)
-                    ).stream()
-                    .map(s -> noiseSigma == 0 ? s : new Noisy(s, noiseSigma, 0))
-                    .collect(Collectors.toList())
-            );
-          }
-      );
+      return body -> Grid.create(body.getW(), body.getH(), (x, y) -> {
+        if (!body.get(x, y)) {
+          return null;
+        }
+        return new Voxel(Utils.ofNonNull(
+            sensor("a", x, y, body),
+            sensor("m", x, y, body, pars.get("malfunction").equals("t")),
+            sensor("t", x, y, body, y == 0),
+            sensor("vxy", x, y, body, y == body.getH() - 1),
+            sensor("cpg", x, y, body, x == body.getW() - 1 && y == body.getH() - 1 && pars.get("cpg").equals("t")),
+            sensor("l5", x, y, body, x == body.getW() - 1)
+        ).stream().map(s -> noiseSigma == 0 ? s : new Noisy(s, noiseSigma, 0)).toList());
+      });
     }
     if ((params = params(uniform, name)) != null) {
       final Map<String, String> pars = params;
       double noiseSigma = Double.parseDouble(params.get("noiseSigma"));
-      return body -> Grid.create(body.getW(), body.getH(), (x, y) -> !body.get(x, y) ? null : new SensingVoxel(
-          Arrays.stream(pars.get("sensors").split("\\+"))
+      return body -> Grid.create(
+          body.getW(),
+          body.getH(),
+          (x, y) -> !body.get(x, y) ? null : new Voxel(Arrays.stream(pars.get("sensors").split("\\+"))
               .map(n -> sensor(n, x, y, body))
               .map(s -> noiseSigma == 0 ? s : new Noisy(s, noiseSigma, 0))
-              .collect(Collectors.toList())
-      ));
+              .toList())
+      );
     }
     if ((params = params(uniformAll, name)) != null) {
       final Map<String, String> pars = params;
       double noiseSigma = Double.parseDouble(params.get("noiseSigma"));
-      return body -> Grid.create(body.getW(), body.getH(), (x, y) -> !body.get(x, y) ? null : new SensingVoxel(
-          PREDEFINED_SENSORS.keySet().stream()
+      return body -> Grid.create(
+          body.getW(),
+          body.getH(),
+          (x, y) -> !body.get(x, y) ? null : new Voxel(PREDEFINED_SENSORS.keySet()
+              .stream()
               .map(n -> sensor(n, x, y, body))
               .map(s -> noiseSigma == 0 ? s : new Noisy(s, noiseSigma, 0))
-              .collect(Collectors.toList())
-      ));
+              .toList())
+      );
     }
     if ((params = params(empty, name)) != null) {
-      return body -> Grid.create(body.getW(), body.getH(), (x, y) -> !body.get(x, y) ? null : new SensingVoxel(List.of()));
+      return body -> Grid.create(body.getW(), body.getH(), (x, y) -> !body.get(x, y) ? null : new Voxel(List.of()));
     }
     throw new IllegalArgumentException(String.format("Unknown sensorizing function name: %s", name));
-  }
-
-  public static Sensor sensor(String name, int x, int y, Grid<Boolean> body) {
-    return sensor(name, x, y, body, true);
-  }
-
-  public static Sensor sensor(String name, int x, int y, Grid<Boolean> body, boolean condition) {
-    if (!condition) {
-      return null;
-    }
-    return PREDEFINED_SENSORS.get(name).apply((double) x / ((double) body.getW() - 1d), (double) y / ((double) body.getH() - 1d));
   }
 
   public static Grid<Boolean> buildShape(String name) {
@@ -255,8 +220,10 @@ public class RobotUtils {
     if ((params = params(ball, name)) != null) {
       int d = Integer.parseInt(params.get("d"));
       return Grid.create(
-          d, d,
-          (x, y) -> Math.round(Math.sqrt((x - (d - 1) / 2d) * (x - (d - 1) / 2d) + (y - (d - 1) / 2d) * (y - (d - 1) / 2d))) <= (int) Math.floor(d / 2d)
+          d,
+          d,
+          (x, y) -> Math.round(Math.sqrt((x - (d - 1) / 2d) * (x - (d - 1) / 2d) + (y - (d - 1) / 2d) * (y - (d - 1) / 2d))) <= (int) Math.floor(
+              d / 2d)
       );
     }
     if ((params = params(comb, name)) != null) {
@@ -271,6 +238,31 @@ public class RobotUtils {
       return Grid.create(w, h, (x, y) -> (y == 0 || (x >= pad && x < h - pad - 1)));
     }
     throw new IllegalArgumentException(String.format("Unknown body name: %s", name));
+  }
+
+  private static Lidar.Side lidarSide(double x, double y) {
+    if (y > x && y > (1 - x)) {
+      return Lidar.Side.N;
+    }
+    if (y >= x && y <= (1 - x)) {
+      return Lidar.Side.W;
+    }
+    if (y < x && y < (1 - x)) {
+      return Lidar.Side.S;
+    }
+    return Lidar.Side.E;
+  }
+
+  public static Sensor sensor(String name, int x, int y, Grid<Boolean> body, boolean condition) {
+    if (!condition) {
+      return null;
+    }
+    return PREDEFINED_SENSORS.get(name)
+        .apply((double) x / ((double) body.getW() - 1d), (double) y / ((double) body.getH() - 1d));
+  }
+
+  public static Sensor sensor(String name, int x, int y, Grid<Boolean> body) {
+    return sensor(name, x, y, body, true);
   }
 
 }
